Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntegerTextObjField.quorum
class Main
    Text t
    integer int
    action Main
        t:SetValue("5")
        int = cast(integer, t)
    end
end
